src/objects/GW_Volunteers__Volunteer_Job__c.object
<CustomObject>
    <fields>
        <fullName>Default_Shift_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Shift Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Default Shift Contact Volunteer Jobs</relationshipLabel>
        <relationshipName>Default_Shift_Contact_Volunteer_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Registration_Details__c</fullName>
        <description>Details (phone number, email, etc.)  on how to register for the volunteer job. If this field is specified, volunteer registration will not be managed by Karma Exchange.</description>
        <label>External Registration Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>External_Registration_Url__c</fullName>
        <description>URL of site to signup to volunteer for the job. If this field is specified, volunteer registration will not be managed by Karma Exchange.</description>
        <label>External Registration Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Location_Coordinates__c</fullName>
        <description>Location gps coordinates in decimal format.</description>
        <label>Location Coordinates</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
</CustomObject>